Fix navigation on small screen sizes.

--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -25,6 +25,7 @@ $accordion-button-active-bg:    $accordion-button-bg;
 
 .main {
   display: flex;
+  margin-top: 5em !important;
 }
 
 .navbar-brand {
